# 3d-hand-detection

./: .gitignore  README.md  app.py  pyproject.toml
app/: image_stream_manager.py
clustering/: README.md  angle_clustering_eval.py  cluster_hand_pose.py  cosine_kmeans.py  frame_utils.py  plot_saved_clustering_model.py  pose_clustering_eval.py  run_camera_angle_clustering.py
clustering/outputs/camera_angle_sweep_2077459_20260421_011035/verts600_k6/: train_cluster_summary_k6.csv
clustering/pose_cluster_outputs/: train_cluster_rankings_k10.csv  train_cluster_rankings_k4.csv  train_cluster_rankings_k5.csv  train_cluster_rankings_k6.csv  train_cluster_rankings_k7.csv  train_cluster_rankings_k8.csv  train_cluster_rankings_k9.csv  train_cluster_summary_k10.csv  train_cluster_summary_k4.csv  train_cluster_summary_k5.csv  train_cluster_summary_k6.csv  train_cluster_summary_k7.csv  train_cluster_summary_k8.csv  train_cluster_summary_k9.csv
data/: eval_data_194_verts.npz  eval_data_400_verts.npz  eval_data_600_verts.npz  eval_data_70_verts.npz  eval_data_778_verts.npz  process_data.py  retrieval_index_600_verts.npz  verify_processed.py
demo/: collision.py  counter.py  demo.py  live_retrieval.py  pose_matcher.py
demo/photo_demo_images/: good_pose.HEIC
knn/: build_index.py  demo.py  live_demo.py  reference_poses.npz  retrieve.py
models/: decoder.py  encoder.py  mesh_pca_utils.py
scripts/: build_index.py  dataset.py  eval.py  eval_test_images.py  model.py  retrieve.py  run_pca.py  train.py
utils/: keypoint_transformation.py  loss_functions.py  visualization.py
(+42 files in other folders)
